--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 </head>
 
 <body>
+    <article>
     <div id="particles-js"></div>
     <script src="js/particles.js-master/particles.js"></script>
     <script src="js/particles.js-master/app.js"></script>
@@ -26,11 +27,16 @@
         <p class="header layer"><h1>Jonathan Navarro</h1></p>
     </div>
 
-    <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="button1">Linkedin</a>
-    </div>
+    <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="button1">LinkedIn</a></div>
+    <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="button1">Resume</a></div>
     <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="button1">Project Advance</a></div>
     <div class="text center"><a href="https://shishcabob.itch.io/shelf-escape" class="button1">Shelf Run</a></div>
 
+    </article>
+
+    <footer>
+        <div class="text center contact">Contact: navarrojonathanj@gmail.com</div>
+    </footer>
 
 </body>
 
