--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
 
     <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="button1">LinkedIn</a></div>
     <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="button1">Resume</a></div>
+    <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="button1">Shelf Run</a></div>
     <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="button1">Project Advance</a></div>
-    <div class="text center"><a href="https://shishcabob.itch.io/shelf-escape" class="button1">Shelf Run</a></div>
 
     </article>
 
