--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="button1">Resume</a></div>
     <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="button1">Project Advance</a></div>
     <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="button1">Shelf Run</a></div>
+    <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="button1">GitHub</a></div>
 
     </article>
 
