Improve button effects

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
     <div class="text name center">
         <p class="header layer"><h1>Jonathan Navarro</h1></p>
     </div>
-
-    <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="button1">LinkedIn</a></div>
-    <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="button1">Resume</a></div>
-    <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="button1">Project Advance</a></div>
-    <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="button1">Shelf Run</a></div>
-    <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="button1">GitHub</a></div>
+    <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="btn">LinkedIn</a></div>
+    <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="btn">Resume</a></div>
+    <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
+    <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
+    <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="btn">GitHub</a></div>
 
     </article>
 
