Add grid layout

--- a/index.html
+++ b/index.html
@@ -15,29 +15,33 @@
 </head>
 
 <body>
-    <article>
     <div id="particles-js"></div>
     <script src="js/particles.js-master/particles.js"></script>
     <script src="js/particles.js-master/app.js"></script>
-    <!--[if lt IE 7]>
-            <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
-        <![endif]-->
+    <div class="grid">
 
-    <div class="text name center">
-        <p class="header layer"><h1>Jonathan Navarro</h1></p>
+        <div class="main">
+            <!--[if lt IE 7]>
+                    <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
+            <![endif]-->
+
+            <div class="text name center">
+               <p class="name layer"><h1>Jonathan Navarro</h1></p>
+            </div>
+            <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="btn">LinkedIn</a></div>
+            <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="btn">Resume</a></div>
+            <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
+            <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
+            <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="btn">GitHub</a></div>
+        </div>
+
+        <div class="footer">
+            <div class="text center contact">
+                Contact: navarrojonathanj@gmail.com
+            </div>
+        </div>
+
     </div>
-    <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="btn">LinkedIn</a></div>
-    <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="btn">Resume</a></div>
-    <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
-    <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
-    <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="btn">GitHub</a></div>
-
-    </article>
-
-    <footer>
-        <div class="text center contact">Contact: navarrojonathanj@gmail.com</div>
-    </footer>
-
 </body>
 
 </html>
