--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
             <![endif]-->
 
             <div class="text name center">
-               <p class="name layer"><h1>Jonathan Navarro</h1></p>
+               <p class="name layer"><b>Jonathan Navarro</b></p>
             </div>
             <div class="text center"><a href="https://drive.google.com/file/d/1y9kE5vZMXGMLq1ITmXrybwpf-VPHhd6t/view?usp=sharing" class="btn">Resume</a></div>
             <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="btn">GitHub</a></div>
-            <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
-            <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
             <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="btn">LinkedIn</a></div>
+            <div class="text center section"><b>Top Projects</b></div>
+            <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
+            <div class="text center"><a href="https://github.com/Navarro-Jonathan/MADJ" class="btn">Clothing Website</a></div>
+            <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
         </div>
 
         <div class="footer">
