Update Shelf Run Link

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="text center"><a href="https://github.com/Navarro-Jonathan" class="btn">GitHub</a></div>
             <div class="text center"><a href="https://www.linkedin.com/in/jonathan-navarro-j/" class="btn">LinkedIn</a></div>
             <div class="text center section"><b>Top Projects</b></div>
-            <div class="text center"><a href="https://shishcabob.itch.io/shelf-run" class="btn">Shelf Run</a></div>
+            <div class="text center"><a href="https://studioskewer.itch.io/shelf-run" class="btn">Shelf Run</a></div>
             <div class="text center"><a href="https://github.com/Navarro-Jonathan/MADJ" class="btn">Clothing Website</a></div>
             <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
         </div>
