--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="text center section"><b>Top Projects</b></div>
             <div class="text center"><a href="https://studioskewer.itch.io/shelf-run" class="btn">Shelf Run</a></div>
             <div class="text center"><a href="https://studioskewer.itch.io/project-advance" class="btn">Project Advance</a></div>
-            <div class="text center"><a href="https://github.com/matfitchell/dubiousdatabase" class="btn">E-commerce Project</a></div>
+            <div class="text center"><a href="https://github.com/matfitchell/dubiousdatabase" class="btn">Database Project</a></div>
         </div>
 
         <div class="footer">
